SERVER-5746 Wrong initialization for ReplicaSetMonitor Nodes

Modified the initialization of the ok member variable of ReplicaSetMonitor::Node to true if conn smart pointer is not null.

Conflicts:

	jstests/sharding/slaveok_routing.js